# serialization

./: .gitignore  .gitmodules  CHANGELOG  Makefile  README.md  measures  report.html  report.json  report.md  serialization-bench.cabal  serialization.cabal  stack.yaml
src/: Dataset.hs  Main.hs  Report.hs
test/: DocSpec.hs
