name:                serialization-bench
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable serialization-bench
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8,
                       binary >=0.7.1 && <0.7.3,
                       bytestring,
                       cereal >=0.4.1 && <0.4.2,
                       criterion,
                       deepseq,
                       packman,
                       QuickCheck,
                       random
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
