name:                serialization
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable serialization-bench
  main-is:             Main.hs
  other-modules: Dataset,Report
  -- other-extensions:
  build-depends:
                QuickCheck,
                base               >=4.8   && <4.10,
                binary             >=0.8   && <0.9,
                binary-serialise-cbor,
                bytestring,
                cereal             >=0.5.1 && <0.6,
                containers >= 0.5.6.2,
                criterion,
                datasets,
                deepseq,
                directory >= 1.2.2.0,
                filepath,
                flat,
                packman,
                random,
                statistics,
                store >= 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  --ghc-options:         -Wall -O2 -ddump-simpl -dsuppress-idinfo -ddump-to-file
