name:                serialization
version:             0.1.3
synopsis: Time and size benchmarks for the most popular Haskell serialization libraries
license-file:        LICENSE
author:              Ömer Sinan Ağacan,Pasqualino `Titto` Assini
maintainer:          tittoassini@gmail.com (Pasqualino `Titto` Assini)
build-type:          Simple
cabal-version:       >=1.10

library
  default-language: Haskell2010
  exposed-modules: Dataset,Report
  HS-Source-Dirs:     src
  build-depends: base,
                 datasets,
                 statistics,
                 deepseq,
                 directory >= 1.2.2.0,
                 filepath,
                 containers >= 0.5.6.2,
                 criterion >= 1.4.1.0,
                 serialise,
                 cereal,
                 binary,
                 flat,
                 packman,
                 store

test-suite docs
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  main-is:            DocSpec.hs
  build-depends:      base, doctest>=0.11.2 && <0.17,filemanip>=0.3.6.3 && < 0.3.7
  HS-Source-Dirs:     test
  ghc-options:        -O0

benchmark all
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules: Dataset,Report
  build-depends:
                QuickCheck,
                base,
                bytestring,
                random,
                statistics,
                deepseq,
                directory >= 1.2.2.0,
                filepath,
                containers >= 0.5.6.2,
                criterion >= 1.4.1.0,
                text,
                serialise,
                cereal,
                binary,
                flat,
                packman,
                store,
                datasets
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-orphans -Wno-name-shadowing -Wno-unused-matches -O2
  --ghc-options:         -Wall -O2 -ddump-simpl -dsuppress-idinfo -ddump-to-file